Fix: modal background z-index
- 모달 백그라운드의 z-index를 50으로 변경합니다

by @Hah-nna #6

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@
   }
 
   .modal-background {
-    @apply fixed left-0 top-0 z-10 h-full w-full bg-[rgba(0,0,0,0.3)];
+    @apply fixed left-0 top-0 z-50 h-full w-full bg-[rgba(0,0,0,0.3)];
   }
 
   .modal-box {
